--- a/BFCNews/Views/User/UserDetails.cshtml
+++ b/BFCNews/Views/User/UserDetails.cshtml
@@ -24,7 +24,7 @@
                         <dt>Tên người dùng:</dt>
                         <dd><input type="text" value="@userDetail.UserName" disabled/></dd>
                         <dt>Password:</dt>
-                        <dd><input type="password" value="@userDetail.PasswordHash" disabled /></dd>
+                        <dd><input type="password" value="@userDetail.PasswordHash" disabled /> <button><i class="fas fa-edit"></i></button></dd>
                         <dt>Email:</dt>
                         <dd><input type="text" value="@userDetail.Email" disabled /></dd>
                         <dt>Họ Tên:</dt>
