--- a/BFCNews/Views/User/Login.cshtml
+++ b/BFCNews/Views/User/Login.cshtml
@@ -2,3 +2,28 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title text-center mb-4">Login</h4>
+                    <form asp-action="Login">
+                        <div class="mb-3">
+                            <label for="username" class="form-label">Username</label>
+                            <input type="text" class="form-control" name="Username" id="Username" placeholder="Enter your email">
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="password" name="Password" placeholder="Enter your password">
+                        </div>
+                        <div class="d-grid gap-2">
+                            <button type="submit" class="btn btn-primary">Login</button>
+                        </div>
+                        <div style="margin-top:15px">Bạn đã quên mật khẩu? <a href="@Url.Action("ForgotPassword","User")" style="text-decoration:none;">Nhấn vào đây</a> để lấy lại mật khẩu</div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
